# ProtonPrefixes

./: .clang-format  CMakeLists.txt  main.cpp  names.cpp  names.h  readme.md  utils.cpp  utils.h
.github/workflows/: cmake-single-platform.yml
src/: colored-cout.h  main.cpp  names.h  utils.cpp  utils.h
